--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
 
     <!-- intestazione logo e titolo-->
 
-    <header> 
-        <img id="logo" src="img/logo.svg" alt=""> 
+    <header>
+        <img id="logo" src="img/logo.svg" alt="">
     </header>
 
     <!-- corpo articolo -->
     <main>
-
+        <!-- titolo dell'articolo -->
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il</h1>
+             <h1 id="manifesto">manifesto di Tim Berners-Lee</h1>
+                <h4>Scritto da <span id="theb">The Booleaner</span></h4>
+                <h5>il 10/10/2020</h5>
+        </section>
     </main>
     <!-- pie di pagina -->
     <footer>
