inserimento foto principali e descrizioni

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
                 <h4>Scritto da <span id="theb">The Booleaner</span></h4>
                 <h5>il 10/10/2020</h5>
         </section>
+        <!-- Foto principali -->
+        <section>
+            <img src="img/tim-1.jpg" alt="">
+            <img src="img/tim-2.jpg" alt="">
+            <div class="jhon">
+                <p>1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+            </div>
+        </section>
     </main>
     <!-- pie di pagina -->
     <footer>
