--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
     </header>
 
     <!-- corpo articolo -->
+
     <main>
+
         <!-- titolo dell'articolo -->
+
         <section>
-            <h1>Internet deve essere al servizio del "bene pubblico": il</h1>
-             <h1 id="manifesto">manifesto di Tim Berners-Lee</h1>
-                <h4>Scritto da <span id="theb">The Booleaner</span></h4>
-                <h5>il 10/10/2020</h5>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <h4>Scritto da <span id="theb">The Booleaner</span></h4>
+            <h5>il 10/10/2020</h5>
         </section>
+
         <!-- Foto principali -->
+
         <section>
             <img src="img/tim-1.jpg" alt="">
             <img src="img/tim-2.jpg" alt="">
@@ -35,6 +39,76 @@
                 <p>2nd Photo: Wikimedia, by Paul Clarke</p>
             </div>
         </section>
+
+        <!-- corpo articolo -->
+
+        <section class="corpo">
+
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum."</p>
+
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa ullam incidunt veniam consectetur eius
+                    fugiat necessitatibus qui quam! Maxime totam enim amet aspernatur tempore facere omnis quos voluptas
+                    magni unde.</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse sunt harum, nisi fugit veniam, vitae
+                    corrupti nam corporis ullam impedit maiores incidunt. Quisquam non praesentium autem voluptate
+                    repellendus voluptates cumque.</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel beatae rerum cumque reprehenderit iure
+                    fugiat earum obcaecati nemo, saepe accusantium sequi vitae architecto possimus, voluptatum incidunt.
+                    Fugit impedit aut expedita!</li>
+
+            </ul>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th class="cella2">Lorem ipsum dolor</th>
+                        <th class="cella3">Lorem ipsum dolor</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="row">
+                    <td>Lorem ipsum dolor</td>
+                    <td class="cella2">Lorem ipsum dolor</td>
+                    <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum quos nemo harum
+                        eius
+                        numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
+                        totam
+                        praesentium temporibus!</td>
+                    </tr>
+                    <tr >
+                        <td>Lorem ipsum dolor</td>
+                        <td class="cella2">Lorem ipsum dolor</td>
+                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum quos nemo harum
+                            eius
+                            numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
+                            totam
+                            praesentium temporibus!</td>
+                        </tr>
+                    
+                </tbody>
+                <tfoot>
+                    <tr class="row">
+                        <td>Lorem ipsum dolor</td>
+                        <td class="cella2">Lorem ipsum dolor</td>
+                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum quos nemo harum
+                            eius
+                            numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
+                            totam
+                            praesentium temporibus!</td>
+                        </tr>  
+                    </tr>
+
+                </tfoot>
+            </table>
+        </section>
+
     </main>
     <!-- pie di pagina -->
     <footer>
