--- a/index.html
+++ b/index.html
@@ -69,52 +69,65 @@
                         <th>Lorem ipsum dolor</th>
                         <th class="cella2">Lorem ipsum dolor</th>
                         <th class="cella3">Lorem ipsum dolor</th>
-                        
+
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="row">
-                    <td>Lorem ipsum dolor</td>
-                    <td class="cella2">Lorem ipsum dolor</td>
-                    <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum quos nemo harum
-                        eius
-                        numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
-                        totam
-                        praesentium temporibus!</td>
-                    </tr>
-                    <tr >
                         <td>Lorem ipsum dolor</td>
                         <td class="cella2">Lorem ipsum dolor</td>
-                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum quos nemo harum
+                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum
+                            quos nemo harum
                             eius
                             numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
                             totam
                             praesentium temporibus!</td>
-                        </tr>
-                    
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td class="cella2">Lorem ipsum dolor</td>
+                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum
+                            quos nemo harum
+                            eius
+                            numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
+                            totam
+                            praesentium temporibus!</td>
+                    </tr>
+
                 </tbody>
                 <tfoot>
                     <tr class="row">
                         <td>Lorem ipsum dolor</td>
                         <td class="cella2">Lorem ipsum dolor</td>
-                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum quos nemo harum
+                        <td class="cella3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum
+                            quos nemo harum
                             eius
                             numquam assumenda nobis eaque, deleniti magni tenetur error voluptas vel quibusdam incidunt
                             totam
                             praesentium temporibus!</td>
-                        </tr>  
+                    </tr>
                     </tr>
 
                 </tfoot>
             </table>
+            <!-- articolo finale -->
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum."</p>
         </section>
 
     </main>
     <!-- pie di pagina -->
+    <p id="info">Potrebbero interessarti</p>
     <footer>
-
+        <img class="foot" src="img/graph.jpg" alt="">
+        <img class="foot" src="img/monitor.jpg" alt="">
     </footer>
 
-</body>
 
+</body></html>
+
+</html>
 </html>
