inserimento immagini footer e frasi evidenziate

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <section class="corpo">
 
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <span class="text"> laboris nisi ut aliquip
+                ex ea commodo consequat</span> . Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum."</p>
 
@@ -112,22 +112,34 @@
             </table>
             <!-- articolo finale -->
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <span class="text"> laboris nisi ut aliquip
+                ex ea commodo consequat.</span>  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum."</p>
         </section>
 
     </main>
+
     <!-- pie di pagina -->
+
     <p id="info">Potrebbero interessarti</p>
+
     <footer>
-        <img class="foot" src="img/graph.jpg" alt="">
-        <img class="foot" src="img/monitor.jpg" alt="">
+
+        <div id="graph">
+            <div class="word">Lorem ipsum dolor</div>
+        </div>
+        <div id="monitor">
+            <div class="word">Lorem ipsum dolor</div>
+        </div>
+
     </footer>
 
 
-</body></html>
+</body>
 
 </html>
+
+</html>
+
 </html>
